--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "test:e2e": "nightwatch",
-	"deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "predeploy": "nuxt generate",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
@@ -31,6 +32,7 @@
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "chromedriver": "^106.0.1",
+    "gh-pages": "^5.0.0",
     "nightwatch": "^2.3.9",
     "sass": "^1.62.0",
     "sass-loader": "^10.4.1"
