--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt",
+  "name": "Микроконтроллеры",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "test:e2e": "nightwatch",
     "predeploy": "nuxt generate",
-	"deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
@@ -24,6 +24,7 @@
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass-resources-loader": "^2.2.5",
+    "serve": "^14.2.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
